# cpp-maths

./: CMakeLists.txt  Maths.cpp  Maths.h  README.md
.github/workflows/: clang-tidy.yml  cmake-multi-platform.yml  tidy.yml
Core/: CallTraits.h  NurbsCurve.h  Pole.h  StaticArray.h
ThirdParties/: CMakeLists.txt
include/: AndOr.h  SolveQuadratic.h  StaticArray.h
